# task2_cpp

./: CMakeLists.txt  ReadMe.md  main.cpp
Component/: IComponent.cpp  IComponent.h
ComponentController/: ComponentController.cpp  ComponentController.h
ComponentImpl/Button/: Button.cpp  Button.h
ComponentImpl/Frame/: Frame.cpp  Frame.h
ComponentImpl/Line/: Line.cpp  Line.h
ComponentImpl/List/: List.cpp  List.h
ComponentImpl/Panel/: Panel.cpp  Panel.h
ComponentImpl/Text/: Text.cpp  Text.h
Container/: IContainer.cpp  IContainer.h
MeasurableComponent/: IMeasurableComponent.cpp  IMeasurableComponent.h
Scene/: Scene.cpp  Scene.h
